# physics-solver-rasterizer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
docs/: ARCHITECTURE_CN.md
include/: Camera.h  GpuPhysicsSolver.h  Mesh.h  ObjLoader.h  PhysicsSolver.h  Shader.h
shaders/: cloth_step.comp  shadow_depth_vertex.glsl
src/: Camera.cpp  GpuPhysicsSolver.cpp  Mesh.cpp  ObjLoader.cpp  PhysicsSolver.cpp  Shader.cpp  app_main.cpp
